--- a/src/main/resources/view/KiteSizer.fxml
+++ b/src/main/resources/view/KiteSizer.fxml
@@ -52,9 +52,9 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="kiteSizeResponse" layoutX="128.0" layoutY="110.0">
+                        <Label fx:id="kiteSizeResponse" layoutX="14.0" layoutY="14.0" text="monkey">
                            <font>
-                              <Font size="66.0" />
+                              <Font size="20.0" />
                            </font>
                         </Label>
                      </children>
