--- a/src/main/resources/view/KiteSizer.fxml
+++ b/src/main/resources/view/KiteSizer.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -8,60 +10,71 @@
 
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.palarran.kitesizer.ui.KiteSizerController">
-   <center>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="284.0" minWidth="10.0" prefWidth="98.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="513.0" minWidth="10.0" prefWidth="76.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="513.0" minWidth="10.0" prefWidth="427.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="129.0" minHeight="0.0" prefHeight="31.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="368.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="368.0" minHeight="10.0" prefHeight="335.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Weight">
-               <GridPane.margin>
-                  <Insets left="6.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="Wind Speed" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="6.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="pounds" GridPane.columnIndex="2">
-               <GridPane.margin>
-                  <Insets left="6.0" />
-               </GridPane.margin>
-            </Label>
-            <Label text="knots" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="6.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="weight" onKeyReleased="#handleOnKeyTyped" GridPane.columnIndex="1" />
-            <TextField fx:id="windSpeed" onKeyReleased="#handleOnKeyTyped" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" onAction="#handleCalculateButtonClick" text="Calculate" GridPane.rowIndex="2" GridPane.valignment="TOP">
-               <GridPane.margin>
-                  <Insets left="6.0" top="10.0" />
-               </GridPane.margin>
-            </Button>
-            <TitledPane animated="false" prefHeight="329.0" prefWidth="427.0" text="Recommended Kite Size" GridPane.columnIndex="2" GridPane.rowIndex="2">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+   <top>
+      <TitledPane animated="false" collapsible="false" text="Calculate Kite Size" BorderPane.alignment="CENTER">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="136.0" prefWidth="598.0">
+               <children>
+                  <GridPane depthTest="DISABLE" layoutX="14.0" layoutY="19.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="570.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="106.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="370.0" minWidth="10.0" prefWidth="105.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="363.0" minWidth="10.0" prefWidth="363.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
                      <children>
-                        <Label fx:id="kiteSizeResponse" layoutX="14.0" layoutY="14.0">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
+                        <TextField fx:id="weight" onKeyReleased="#handleOnKeyTyped" GridPane.columnIndex="1" />
+                        <TextField fx:id="windSpeed" onKeyReleased="#handleOnKeyTyped" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="Weight">
+                           <GridPane.margin>
+                              <Insets left="6.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label text="Wind Speed" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="6.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label text="pounds" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets left="6.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label text="knots" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="6.0" />
+                           </GridPane.margin>
                         </Label>
                      </children>
-                  </AnchorPane>
-              </content>
-            </TitledPane>
+                  </GridPane>
+               </children>
+            </AnchorPane>
+        </content>
+      </TitledPane>
+   </top>
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Circle fx:id="kiteSizeCircle" fill="#0f7566" layoutX="300.0" layoutY="118.0" radius="56.0" stroke="BLACK" strokeType="INSIDE" />
+            <Label fx:id="kiteSizeResponse" alignment="CENTER" contentDisplay="CENTER" layoutX="37.0" layoutY="14.0" text="This is where the response messages go">
+               <font>
+                  <Font size="27.0" />
+               </font>
+            </Label>
+            <Label fx:id="kiteSize" alignment="CENTER" contentDisplay="CENTER" layoutX="265.0" layoutY="85.0" prefHeight="66.0" prefWidth="0.0" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="54.0" />
+               </font>
+            </Label>
+            <Label fx:id="squareMeters" layoutX="370.0" layoutY="98.0" text="sq. meters">
+               <font>
+                  <Font name="System Bold" size="31.0" />
+               </font>
+            </Label>
          </children>
-      </GridPane>
+      </Pane>
    </center>
 </BorderPane>
